--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "dependencies": {
     "aliasify": "^1.7.2",
     "cordova-app-hello-world": "3.10.0",
-    "cordova-common": "1.0.x",
+    "cordova-common": "*",
     "cordova-js": "4.1.2",
     "cordova-registry-mapper": "1.x",
     "cordova-serve": "^1.0.0",
@@ -67,9 +67,6 @@
     "valid-identifier": "0.0.1",
     "xcode": "0.8.0"
   },
-  "bundledDependencies": [
-    "cordova-common"
-  ],
   "devDependencies": {
     "istanbul": "^0.3.4",
     "jasmine-node": "1.14.5",
